--- a/public/html/pdf.html
+++ b/public/html/pdf.html
@@ -33,7 +33,7 @@
                 <input type="text"
                        class="form-control"
                        id="formGroupExampleInput2"
-                       placeholder="노션 데이터베이스 인라인 URL">
+                       placeholder="노션 데이터베이스 게시 링크">
                 <button class="btn btn-light border" type="button" id="convertBtn">
                     추출하기
                 </button>
@@ -52,9 +52,10 @@
             <!-- 주의사항 영역 -->
             <div class="alert alert-secondary mt-4 text-start" role="alert">
                 ⚠️ <b>주의사항</b><br>
-                1. 데이터베이스 아래의 추출할 모든 페이지는 공개 설정으로 되어있어야 합니다.<br>
-                2. 페이지 크기에 따라 추출 시간이 오래 걸릴 수 있습니다.<br>
-                3. 입력하는 링크는 데이터베이스 URL 이어야 합니다.
+                1. 데이터베이스 내의 <b>공개 설정</b> 된 페이지만 추출됩니다.<br>
+                2. 페이지 개수와 크기에 따라 추출 시간이 오래 걸릴 수 있습니다.<br>
+                3. 입력하는 링크는 노션 데이터베이스 URL 이어야 합니다.<br>
+                4. <b>인라인 데이터베이스</b> 일 시 <b>페이지로 열기</b> 후 게시 링크를 입력해야 합니다.
             </div>
 
             <!-- 사용법 영역 -->
@@ -64,9 +65,9 @@
                 </div>
                 <div class="card-body">
                     <ol>
-                        <li>노션에서 추출하고 싶은 <b>데이터베이스 인라인 URL</b>을 복사합니다.</li>
+                        <li>노션에서 <b>데이터베이스에서 공유 -> 게시 -> 게시 링크</b>를 복사합니다.</li>
                         <li>위 입력창에 붙여넣고 <b>추출하기</b> 버튼을 클릭합니다.</li>
-                        <li>추출이 완료되면 PDF 파일을 다운로드할 수 있습니다.</li>
+                        <li>추출이 완료되면 PDF 파일이 자동으로 다운로드 됩니다.</li>
                     </ol>
                 </div>
             </div>
