--- a/public/html/pdf.html
+++ b/public/html/pdf.html
@@ -54,18 +54,20 @@
                 ⚠️ <b>주의사항</b><br>
                 1. 데이터베이스 내의 <b>공개 설정</b> 된 페이지만 추출됩니다.<br>
                 2. 페이지 개수와 크기에 따라 추출 시간이 오래 걸릴 수 있습니다.<br>
-                3. 입력하는 링크는 노션 데이터베이스 URL 이어야 합니다.<br>
-                4. <b>인라인 데이터베이스</b> 일 시 <b>페이지로 열기</b> 후 게시 링크를 입력해야 합니다.
+                3. 입력하는 링크는 노션 데이터베이스 URL이어야 합니다.<br>
+                4. <b>인라인 데이터베이스는 페이지로 열기</b> 후 게시 링크를 입력해야 합니다.<br>
+                4. 브라우저 환경에 따라 <b>다크모드</b>로 추출 될 수 있습니다.
             </div>
 
             <!-- 사용법 영역 -->
             <div class="card mt-4 text-start">
                 <div class="card-header bg-light">
-                    📘 사용법
+                    📘 <b>사용법</b>
                 </div>
                 <div class="card-body">
                     <ol>
                         <li>노션에서 <b>데이터베이스에서 공유 -> 게시 -> 게시 링크</b>를 복사합니다.</li>
+                        <li><b>인라인 데이터베이스는 페이지로 열기</b> 후 게시 링크를 입력해야 합니다.</li>
                         <li>위 입력창에 붙여넣고 <b>추출하기</b> 버튼을 클릭합니다.</li>
                         <li>추출이 완료되면 PDF 파일이 자동으로 다운로드 됩니다.</li>
                     </ol>
