feat(진행 중): html2pdf-node 활용 pdf 전환 기능 구현

--- a/public/html/pdf.html
+++ b/public/html/pdf.html
@@ -84,29 +84,25 @@
 <script src="/js/pdf.js"></script>
 </body>
 <!-- Footer -->
-<!-- Footer -->
-<footer class="bg-dark text-white-50 mt-5 py-3 small">
-    <div class="container text-start">
-        <p class="mb-1">
-            © 2025 seoseuo. All rights reserved.
-        </p>
-        <p class="mb-1">
-            This project uses <a href="https://getbootstrap.com/" target="_blank" class="text-white-50 text-decoration-none">Bootstrap</a>
-            (MIT License).
-        </p>
-        <p class="mb-1">
-            Source code available on
-            <a href="https://github.com/seoseuo/notion-db-docs-integration-extractor" target="_blank" class="text-white-50 text-decoration-none">
-                <u>GitHub</u>
-            </a>
-        </p>
-        <p class="mb-0">
-            Contact: <a href="mailto:seoseuo@naver.com" class="text-white-50 text-decoration-none"><u>seoseuo@naver.com</u></a>
-        </p>
-    </div>
-</footer>
-
-
-
+<!--<footer class="bg-dark text-white-50 mt-5 py-3 small">-->
+<!--    <div class="container text-start">-->
+<!--        <p class="mb-1">-->
+<!--            © 2025 seoseuo. All rights reserved.-->
+<!--        </p>-->
+<!--        <p class="mb-1">-->
+<!--            This project uses <a href="https://getbootstrap.com/" target="_blank" class="text-white-50 text-decoration-none">Bootstrap</a>-->
+<!--            (MIT License).-->
+<!--        </p>-->
+<!--        <p class="mb-1">-->
+<!--            Source code available on-->
+<!--            <a href="https://github.com/seoseuo/notion-db-docs-integration-extractor" target="_blank" class="text-white-50 text-decoration-none">-->
+<!--                <u>GitHub</u>-->
+<!--            </a>-->
+<!--        </p>-->
+<!--        <p class="mb-0">-->
+<!--            Contact: <a href="mailto:seoseuo@naver.com" class="text-white-50 text-decoration-none"><u>seoseuo@naver.com</u></a>-->
+<!--        </p>-->
+<!--    </div>-->
+<!--</footer>-->
 
 </html>
